--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
 	"Input File": "./inputs/1.txt",
-	"Random Seed": null,
+	"Random Seed": 1505103366,
 	"Search Algorithm": "Random Search",
 	"Runs": 30,
-	"Fitness Evaluations": 1000,
+	"Fitness Evaluations": 10,
 	"Log File Path": "",
 	"Solution File Path": "",
 	"Algorithm Solution File Path": ""
