--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
-	"Random Seed": 1,
+	"Random Seed": 4,
 	"Search Algorithm": "EA",
 	"Runs": 30,
 	"Fitness Evaluations": 1000,
-	"µ, Population Size": 100,
+	"Population Size": 1,
 	"Log File Path": "",
 	"Solution File Path": "",
-	"λ, Offspring Count": 50,
+	"Offspring Count": 50,
 	"Tournament Size For Parent Selection": 2,
 	"Tournament Size For Survival Selection": 2,
 	"Mutation Rate": 0.1,
