--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
-	"Random Seed": 4,
-	"Search Algorithm": "EA",
+	"Random Seed": 6,
+	"Search Algorithm": "Random Search",
 	"Runs": 30,
 	"Fitness Evaluations": 1000,
 	"Population Size": 1,
 	"Log File Path": "",
 	"Solution File Path": "",
-	"Offspring Count": 50,
+	"Offspring Count": 10,
 	"Tournament Size For Parent Selection": 2,
 	"Tournament Size For Survival Selection": 2,
 	"Mutation Rate": 0.1,
