--- a/config.json
+++ b/config.json
@@ -11,8 +11,9 @@
 	"Tournament Size For Survival Selection": 5,
 	"Mutation Rate": 0.1,
 	"Termination Convergence Criterion": 10000,
-	"Parent Selection Algorithm": "k-Tournament Selection with replacement",
+	"Parent Selection Algorithm": "Fitness Proportional Selection",
+	"Placement Algorithm": "Random with Repair",
 	"Recombination Algorithm": "Partially Mapped Crossover",
-	"Mutation Algorithm": "Both",
+	"Mutation Algorithm": "Move",
 	"Survivor Algorithm": "Truncation"
 }
