--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
 	"Population Size": 100,
 	"Log File Path": "",
 	"Solution File Path": "",
-	"Offspring Count": 50,
+	"Offspring Count": 100,
 	"Tournament Size For Parent Selection": 5,
 	"Tournament Size For Survival Selection": 5,
 	"Mutation Rate": 0.1,
@@ -16,5 +16,5 @@
 	"Recombination Algorithm": "Partially Mapped Crossover",
 	"Mutation Algorithm": "Move",
 	"Survivor Algorithm": "Truncation",
-	"Survivor Strategy": "Plus"
+	"Survival Strategy": "Plus"
 }
