--- a/config.json
+++ b/config.json
@@ -12,9 +12,11 @@
 	"Mutation Rate": 0.1,
 	"Termination Convergence Criterion": 10000,
 	"Parent Selection Algorithm": "Fitness Proportional Selection",
-	"Placement Algorithm": "Random with Repair",
+	"Placement Algorithm": "Random with Penalty",
 	"Recombination Algorithm": "Partially Mapped Crossover",
 	"Mutation Algorithm": "Move",
 	"Survivor Algorithm": "Truncation",
-	"Survival Strategy": "Plus"
+	"Survival Strategy": "Plus",
+	"Self Adaptive Mutation Rate": true,
+	"Penalty Coefficient": 1
 }
